gccida/c3/expand_start_bindings_and_block
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_start_bindings_and_block/src/stmt.c:3906:34: error: expected expression
if ( x_block_stack && *( _OWORD *)&x_block_stack->data.case_stmt.nominal_type != 0LL ) 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_start_bindings_and_block/src/stmt.c:3906:26: error: use of undeclared identifier '_OWORD'
if ( x_block_stack && *( _OWORD *)&x_block_stack->data.case_stmt.nominal_type != 0LL ) 
                         ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_start_bindings_and_block/src/obj/stmt.o] Error 1
